--- a/flag_builder/CMakeLists.txt
+++ b/flag_builder/CMakeLists.txt
@@ -13,9 +13,9 @@ set(PROJECT_VERSION 1.0.0 CACHE STRING "flag_builder version")
 set(UPGRADE_GUID "")
 DISSECT_VERSION()
 set(PROJECT_SHORT_VER ${PROJECT_VERSION_MAJOR}${PROJECT_VERSION_MINOR}${PROJECT_VERSION_REVISION})
-set(PROJECT_DESCRIPTION "ModuleDescription")
+set(PROJECT_DESCRIPTION "calculate a inclination, convert a proportion and output a proportion. ")
 set(PROJECT_VENDOR "shirai")
-set(PROJECT_MAINTAINER "unknown")
+set(PROJECT_MAINTAINER "白井哲平<shibaurartm@gmail.com>")
 set(PROJECT_TYPE "c++/Category")
 
 find_package(OpenRTM)
