--- a/flag_builder/flag_builder.conf
+++ b/flag_builder/flag_builder.conf
@@ -26,17 +26,17 @@
 
 # Configuration-set example
 #
-# conf.default.Denominator: 10000
+# conf.default.dt: 0.5
 # conf.default.Flag: 5000
 #
 # Additional configuration-set example named "mode0"
 #
-# conf.mode0.Denominator: 10000
+# conf.mode0.dt: 0.5
 # conf.mode0.Flag: 5000
 #
 # Other configuration set named "mode1"
 #
-# conf.mode1.Denominator: 10000
+# conf.mode1.dt: 0.5
 # conf.mode1.Flag: 5000
 
 ##============================================================
@@ -84,7 +84,7 @@
 ## - array:        <constraints0>, ,constraints1>, ... for only array value
 ## - hash:         {key0: value0, key1:, value0, ...}
 ##
-# conf.__widget__.Denominator, text
+# conf.__widget__.dt, text
 # conf.__widget__.Flag, text
 
 
@@ -96,7 +96,7 @@
 # conf.__constraints__.vector_param0: (dog,monky,pheasant,cat)
 # conf.__constraints__.vector_param1: (pita,gora,switch)
 
-# conf.__type__.Denominator: double
+# conf.__type__.dt: double
 # conf.__type__.Flag: double
 
 ##============================================================
